updated per feedback

--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -182,7 +182,7 @@ items:
             href: connecting-external-content-manage-items.md
           - name: API limits
             href: connecting-external-content-api-limits.md
-          - name: Quickstart - Build your first custom connector
+          - name: Build your first custom connector
             href: connecting-external-content-build-quickstart.yml            
       - name: Cross-device experiences
         displayName: Project Rome
