--- a/concepts/connecting-external-content-build-quickstart.yml
+++ b/concepts/connecting-external-content-build-quickstart.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Tutorial
-title: Build your first custom Microsoft Graph Connector
+title: Build your first custom Microsoft Graph connector
 metadata:
-  title: Build your first custom Microsoft Graph Connector
+  title: Build your first custom Microsoft Graph connector
   description: In this tutorial, you'll build your first custom Microsoft Graph Connector.
   audience: Developer
   level: Beginner
