--- a/api-reference/v1.0/toc.yml
+++ b/api-reference/v1.0/toc.yml
@@ -3691,17 +3691,15 @@ items:
         href: resources/educationschool.md
         items:
         - name: List schools
-          href: api/educationschool-list.md
+          href: api/educationroot-list-schools.md
         - name: Create school
-          href: api/educationschool-post.md
+          href: api/educationroot-post-schools.md
         - name: Get school
           href: api/educationschool-get.md
         - name: Update school
           href: api/educationschool-update.md
         - name: Delete school
           href: api/educationschool-delete.md
-        - name: Get changes to schools
-          href: api/educationschool-delta.md
         - name: List classes
           href: api/educationschool-list-classes.md
         - name: Create class
@@ -3717,18 +3715,18 @@ items:
       - name: Classes
         href: resources/educationclass.md
         items:
+        - name: List schools
+          href: api/educationclass-list-schools.md
         - name: List classes
-          href: api/educationclass-list.md
+          href: api/educationroot-list-classes.md
         - name: Create class
-          href: api/educationclass-post.md
+          href: api/educationroot-post-classes.md
         - name: Get class
           href: api/educationclass-get.md
         - name: Update class
           href: api/educationclass-update.md
         - name: Delete class
           href: api/educationclass-delete.md
-        - name: Get changes to classes
-          href: api/educationclass-delta.md
         - name: List teachers
           href: api/educationclass-list-teachers.md
         - name: Add teacher
@@ -3744,20 +3742,14 @@ items:
       - name: Users
         href: resources/educationuser.md
         items:
-        - name: List users
-          href: api/educationuser-list.md
-        - name: Create user
-          href: api/educationuser-post.md
+        - name: List schools
+          href: api/educationuser-list-schools.md
+        - name: List classes
+          href: api/educationuser-list-classes.md
         - name: Get user
           href: api/educationuser-get.md
         - name: Delete user
           href: api/educationuser-delete.md
-        - name: Get changes to users
-          href: api/educationuser-delta.md
-        - name: List classes
-          href: api/educationuser-list-classes.md
-        - name: List taught classes
-          href: api/educationuser-list-taughtclasses.md
     - name: Extensions
       items:
       - name: Open extensions
@@ -4631,22 +4623,22 @@ items:
           href: api/mailfolder-update.md
         - name: Delete mail folder
           href: api/mailfolder-delete.md
-        - name: Copy mail folder
-          href: api/mailfolder-copy.md
-        - name: Create child folder
-          href: api/mailfolder-post-childfolders.md
-        - name: Create message in folder
-          href: api/mailfolder-post-messages.md          
         - name: Get mail folder delta
           href: api/mailfolder-delta.md
+        - name: Copy mail folder
+          href: api/mailfolder-copy.md
+        - name: Move mail folder
+          href: api/mailfolder-move.md
+        - name: List messages in folder
+          href: api/mailfolder-list-messages.md
+        - name: Create message in folder
+          href: api/mailfolder-post-messages.md
         - name: Get message delta
           href: api/message-delta.md
         - name: List child folders
           href: api/mailfolder-list-childfolders.md
-        - name: List messages in folder
-          href: api/mailfolder-list-messages.md
-        - name: Move mail folder
-          href: api/mailfolder-move.md
+        - name: Create mail child folder
+          href: api/mailfolder-post-childfolders.md
       - name: Mail search folder
         href: resources/mailsearchfolder.md
         items:
@@ -4918,11 +4910,6 @@ items:
             href: api/signin-list.md
           - name: Get sign-in
             href: api/signin-get.md
-        - name: Provisioning
-          href: resources/provisioningobjectsummary.md
-          items:
-          - name: List provisioning
-            href: api/provisioningobjectsummary-list.md
       - name: Microsoft 365 usage reports
         items:
         - name: Overview
@@ -5483,10 +5470,6 @@ items:
           href: api/chat-post-messages.md
         - name: Get chat between user and app 
           href: api/userscopeteamsappinstallation-get-chat.md
-        - name: List operations
-          href: api/chat-list-operations.md
-        - name: Get operation
-          href: api/chat-get-operation.md
       - name: Chat message
         href: resources/chatmessage.md
         items:
