fixed a few spacing and spell errors

--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -503,7 +503,7 @@ items:
                     href: change-notification-in-microsoft-teams-overview.md
                   - name: Change notifications for chat and channel messages
                     href: teams-changenotifications-chatmessage.md
-                  - name: Change notifications for team and channel events
+                  - name: Change notifications for team and channel
                     href: teams-changenotifications-team-and-channels.md
                   - name: Change notifications for team membership
                     href: teams-changenotifications-teamMembership.md
