Surface invalidateAllRefreshTokens action

--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -216,6 +216,8 @@ items:
           href: api/user-delete.md
         - name: Get delta
           href: api/user-delta.md
+        - name: Invalidate refresh tokens
+          href: api/user-invalidateallrefreshtokens.md
       - name: App role assignments
         href: resources/approleassignment.md
         items:
