--- a/api-reference/v1.0/toc.yml
+++ b/api-reference/v1.0/toc.yml
@@ -4048,6 +4048,18 @@ items:
           href: api/educationclass-post-members.md
         - name: Remove member
           href: api/educationclass-delete-members.md
+        - name: List assignments
+          href: api/educationclass-list-assignments.md
+        - name: Create assignment
+          href: api/educationclass-post-assignments.md
+        - name: Get assignment settings
+          href: api/educationassignmentsettings-get.md
+        - name: Get assignment defaults
+          href: api/educationassignmentdefaults-get.md
+        - name: List categories
+          href: api/educationclass-list-categories.md
+        - name: Create category
+          href: api/educationclass-post-category.md
       - name: Users
         href: resources/educationuser.md
         items:
@@ -4063,8 +4075,122 @@ items:
           href: api/educationuser-delta.md
         - name: List classes
           href: api/educationuser-list-classes.md
+        - name: List rubrics
+          href: api/educationuser-list-rubrics.md
         - name: List taught classes
           href: api/educationuser-list-taughtclasses.md
+        - name: Create rubric
+          href: api/educationuser-post-rubrics.md
+      - name: Assignment
+        href: resources/educationassignment.md
+        items:
+        - name: Create assignment
+          href: api/educationclass-post-assignments.md
+        - name: Get assignment
+          href: api/educationassignment-get.md
+        - name: Update assignment
+          href: api/educationassignment-update.md
+        - name: Delete assignment
+          href: api/educationassignment-delete.md
+        - name: List assignment resources
+          href: api/educationassignment-list-resources.md
+        - name: Create assignment resource
+          href: api/educationassignment-post-resources.md
+        - name: Get assignment resource
+          href: api/educationassignmentresource-get.md
+        - name: Delete resource from assignment
+          href: api/educationassignmentresource-delete.md
+        - name: Publish assignment
+          href: api/educationassignment-publish.md
+        - name: List submissions for assignment
+          href: api/educationassignment-list-submissions.md
+        - name: Set up assignment resources folder
+          href: api/educationassignment-setupresourcesfolder.md
+        - name: Get rubric attached to assignment
+          href: api/educationassignment-get-rubric.md
+        - name: List categories
+          href: api/educationassignment-list-categories.md
+        - name: Add category
+          href: api/educationassignment-add-categories.md
+        - name: Remove category
+          href: api/educationassignment-remove-category.md
+        - name: Attach rubric to assignment
+          href: api/educationassignment-put-rubric.md
+        - name: Remove rubric from assignment
+          href: api/educationassignment-delete-rubric.md
+      - name: Assignment settings
+        href: resources/educationassignmentsettings.md
+        items:
+        - name: Get assignment settings
+          href: api/educationassignmentsettings-get.md
+        - name: Update assignment settings
+          href: api/educationassignmentsettings-update.md
+      - name: Assignment defaults
+        href: resources/educationassignmentdefaults.md
+        items:
+        - name: Get assignment defaults
+          href: api/educationassignmentdefaults-get.md
+        - name: Update assignment defaults
+          href: api/educationassignmentdefaults-update.md
+      - name: Category
+        href: resources/educationcategory.md
+        items:
+        - name: Create category
+          href: api/educationclass-post-category.md
+        - name: Get category
+          href: api/educationcategory-get.md
+        - name: Delete category
+          href: api/educationcategory-delete.md
+      - name: Rubric
+        href: resources/educationrubric.md
+        items:
+        - name: Create rubric
+          href: api/educationuser-post-rubrics.md
+        - name: Get rubric
+          href: api/educationrubric-get.md
+        - name: Update rubric
+          href: api/educationrubric-update.md
+        - name: Delete rubric
+          href: api/educationrubric-delete.md
+      - name: Submission
+        href: resources/educationsubmission.md
+        items:
+        - name: List submission resources
+          href: api/educationsubmission-list-resources.md
+        - name: Add submission resource
+          href: api/educationsubmission-post-resources.md
+        - name: Get submission resource
+          href: api/educationsubmissionresource-get.md
+        - name: Delete submission resource
+          href: api/educationsubmissionresource-delete.md
+        - name: Get submission
+          href: api/educationsubmission-get.md
+        - name: Set up submission resources folder
+          href: api/educationsubmission-setupresourcesfolder.md
+        - name: Submit submission
+          href: api/educationsubmission-submit.md
+        - name: Unsubmit submission
+          href: api/educationsubmission-unsubmit.md
+        - name: List submitted resources
+          href: api/educationsubmission-list-submittedresources.md
+        - name: List outcomes
+          href: api/educationsubmission-list-outcomes.md
+        - name: Get submitted resource
+          href: api/educationsubmittedsubmissionresource-get.md
+        - name: Return submission
+          href: api/educationsubmission-return.md
+      - name: Outcome
+        items:
+        - name: Outcome
+          href: resources/educationoutcome.md
+        - name: Feedback outcome type
+          href: resources/educationfeedbackoutcome.md
+        - name: Points outcome type
+          href: resources/educationpointsoutcome.md
+        - name: Rubric outcome type
+          href: resources/educationrubricoutcome.md
+        - name: Update outcome
+          href: api/educationoutcome-update.md
     - name: Extensions
       items:
       - name: Open extensions
