--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -497,15 +497,15 @@ items:
               - name: Change notifications for cloud printing
                 href: universal-print-webhook-notifications.md
               - name: Change notification in Microsoft Teams
-                displayName: Change notification in Microsoft Teams
+                displayName: Change notifications in Microsoft Teams
                 items:
                   - name: Overview
                     href: change-notification-in-microsoft-teams-overview.md
-                  - name: Change notifications for chat and channel messages
+                  - name: Chat and channel messages
                     href: teams-changenotifications-chatmessage.md
-                  - name: Change notifications for team and channel
+                  - name: Teams and channels
                     href: teams-changenotifications-team-and-channel.md
-                  - name: Change notifications for team membership
+                  - name: Team membership
                     href: teams-changenotifications-teamMembership.md
           - name: Change tracking
             displayName: Delta query, track changes, Outlook calendar, Groups, Outlook mail, Users
