TOC: Devices and apps are expanded by default
Fixes a minor issue with the TOC where "Devices and apps" was expanded by default (`expanded: true`)

--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -1708,7 +1708,7 @@ items:
         - name: Delete
           href: api/bookingstaffmember-delete.md
     - name: Devices and apps
-      expanded: true
+      expanded: false
       items:
       - name: Cloud printing
         items:
