--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -13068,6 +13068,41 @@ items:
           href: api/tiindicator-deletetiindicatorsbyexternalid.md
       - name: Errors
         href: resources/security-error-codes.md
+    - name: Service communications (preview)
+      href: resources/serviceannouncement.md
+      items:
+      - name: Service health
+        items:
+        - name: Get serviceHealth
+          href: api/servicehealth-get.md
+        - name: List healthOverviews
+          href: api/serviceannouncement-list-healthoverviews.md
+      - name: Service health issue
+        items:
+        - name: Get issue
+          href: api/servicehealthissue-get.md
+        - name: List issues
+          href: api/serviceannouncement-list-issues.md
+        - name: Get post-incident review report
+          href: api/servicehealthissue-incidentreport.md
+      - name: Service update message
+        items:
+        - name: Get message
+          href: api/serviceupdatemessage-get.md
+        - name: List messages
+          href: api/serviceannouncement-list-messages.md
+        - name: Mark read status
+          href: api/serviceupdatemessage-markread.md
+        - name: Mark unread status
+          href: api/serviceupdatemessage-markunread.md
+        - name: Archive status
+          href: api/serviceupdatemessage-archive.md
+        - name: Unarchive status
+          href: api/serviceupdatemessage-unarchive.md
+        - name: Mark favorite status
+          href: api/serviceupdatemessage-favorite.md
+        - name: Remove favorite status
+          href: api/serviceupdatemessage-unfavorite.md
     - name: Sites and lists
       displayName: SharePoint, OneDrive, OneDrive for Business, OneDrive business, OneDrive personal
       items:
@@ -14184,38 +14219,3 @@ items:
           href: api/nameditem-add.md
         - name: List range
           href: api/nameditem-range.md
-    - name: Service communications (preview)
-      href: resources/serviceannouncement.md
-      items:
-      - name: Health overviews
-        items:
-        - name: Get serviceHealth
-          href: api/servicehealth-get.md
-        - name: List healthOverviews
-          href: api/serviceannouncement-list-healthoverviews.md
-      - name: Issues
-        items:
-        - name: Get issue
-          href: api/servicehealthissue-get.md
-        - name: List issues
-          href: api/serviceannouncement-list-issues.md
-        - name: Get post-incident review report
-          href: api/servicehealthissue-incidentreport.md
-      - name: Messages
-        items:
-        - name: Get message
-          href: api/serviceupdatemessage-get.md
-        - name: List messages
-          href: api/serviceannouncement-list-messages.md
-        - name: Mark read status
-          href: api/serviceupdatemessage-markread.md
-        - name: Mark unread status
-          href: api/serviceupdatemessage-markunread.md
-        - name: Archive status
-          href: api/serviceupdatemessage-archive.md
-        - name: Unarchive status
-          href: api/serviceupdatemessage-unarchive.md
-        - name: Mark favorite status
-          href: api/serviceupdatemessage-favorite.md
-        - name: Remove favorite status
-          href: api/serviceupdatemessage-unfavorite.md
