--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -403,7 +403,7 @@ items:
             href: information-protection-overview.md
           - name: Partner opportunities
             href: security-partner-overview.md
-      - name: Service communications
+      - name: Service communications (preview)
         href: service-communications-concept-overview.md
       - name: Sites and lists
         href: sharepoint-concept-overview.md
