Fix casing of TOC entry.

--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -13889,7 +13889,7 @@ items:
           href: api/onenote-list-notebooks.md
         - name: Create notebook
           href: api/onenote-post-notebooks.md
-      - name: Resource-specific Permission Grants
+      - name: Resource-specific permission grants
         href: resources/resourcespecificpermissiongrant.md
     - name: To-do tasks
       displayName: Microsoft To Do
